@startuml
entity Exam {
    pin: number
    state: number
    actual_end: timestamp
    planned_end: timestamp
    planned_start: timestamp
    title: varchar(100)
    ---
    id: number <<PK>>
}

entity Examinee {
    firstname: varchar(50)
    lastname: varchar(50)
    ---
    id: number <<PK>>
}

entity Participation {
    ---
    id: number <<PK>>
}

entity ConnectionState {
    is_connected: boolean
    ping_timestamp: timestamp
    ---
    id: number <<PK>>
}

entity Image {
    capture_timestamp: timestamp
    path: varchar(4095)
    ---
    id: number <<PK>>
}

Exam "1" -- "n" Participation
Participation "n" -- "1" Examinee
Participation "1" -- "n" ConnectionState
Participation "1" -- "n" Image
@enduml